Fix sonar and reverse some minor changes.